CERT-0002 add branch endpoint
Added Branch controller, service and repository also use cases for controller